--- a/index.html
+++ b/index.html
@@ -7,30 +7,68 @@
         <!--BOOTSTRAP-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!--CSS-->
-        
-    </head>
- <!--START OF BODY-->     
- <body>
- <!--START OF HEADER-->
- <header>
- <!--START OF NAV-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a>Trash Tracker</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-        </button> 
+        <link rel="stylesheet" href="css/stylesheet.css" >
+</head>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-             <li class="nav-item active">
-              <a link="/logout.html">Logout</a>
+<body> <!--START OF BODY-->     
+ <header> <!--START OF HEADER-->
+  <!--START OF NAV-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!--LOGO-->
+    <a class="navbar-brand" href="">
+        <img src="images/trashTracker.png" width="40" height="auto"/> 
+    </a>    
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+    </button>
+    <!--START NAV BAR-->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a link="/logout.html">Profile</a>
+        </li>
+    </ul>
+    <a href="#" data-toggle="modal" data-target="#logoutModal"> 
+        <button type="button" class="btn btn-outline-success">Logout</button>
+    </a>
+    </div>
+  </nav><!--END OF NAV-->
+</header><!--END OF HEADER-->
+
+<div class="top_body">
+ <div class="row">
+<div class="column left" style="background-color:#507ed4;">  
+     <p>Address <br/>
+      Street <br/>
+      City <br/>
+      State <br/>
+      Zipcode <br/>
+     </p>     
+ </div>
+<div class="column right" style="background-color:#ade800;">
+    <p class="img_center">
+     <img src="images/waste.png" width="100px"> 
+     <img src="images/recycle.png" width="90px"> 
+     <img src="images/greenwaste.png" width="90px">    
+    </p>     
+ </div>
+</div>
+</div>
+
+<div class="body_container">
+ <h3>Historical Comparison</h3>
+    <div class="inner_container" name="normComparison">  
+    <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Weekly View</a>
             </li>
-        </ul>
-     </nav>
-<!--END OF NAV-->
-
-<div class=".container-fluid" name="normComparison">  
-    <h1>Historical Comparison</h1>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Monthly</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Year View</a>
+            </li>
+          </ul>
     <p>
         <ul>
             <li>Bar graph (weekly view)</li>
@@ -38,21 +76,44 @@
             <li>Clickables to show or hide</li>
         </ul>
     </p>
+ </div>
 </div>
 
-<div class=".container-fluid" name="game">
-    <h1>Norm Comparison</h1>
-    <p>
+<div class="body_container">
+ <h3>Norm Comparison</h3>
+    <div class="inner_container" name="normComparison">  
+     <div class="row">
+      <div class="column left" style="background-color:#94968e;"> 
+      <p class="img_center"><img src="images/thumbsUp.png" width="125px"></p>
+      </div>
+
+    <div class="column right" style="background-color:#ade800;">
+            <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#">Closet Neighbors</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Neighborhood</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">City</a>
+                    </li>
+                  </ul>
+        <p>
         <ul>
             <li>Total waste and recycle compared to your neighbors.</li>
             <li>Load data next to them</li>
             <li>City comparison</li>
         </ul>
     </p>
+    </div>  
+  </div>
+ </div>
 </div>
 
-<div class=".container-fluid" name="game">
-   <h1>Recycle Game</h1>
+<div class="body_container">
+ <h3>Recycle Game</h3>
+    <div class="inner_container" name="normComparison">  
     <p>
         <ul>
             <li>Be able to go back see what the other items </li>
@@ -60,9 +121,16 @@
             <li>Correct fill one star</li>
         </ul>
     </p>    
+ </div>
 </div>
 
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+<div class="bottom_container">        
+    <div class="footer">
+        <p id="social_media_links">Footer Goes Here</p>
+    </div>
+</div>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
