--- a/index.html
+++ b/index.html
@@ -1,165 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Trash Tracker</title>
-    <link rel="icon" href="images/trashTracker.jpg"/>
-    <!--BOOTSTRAP-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!--CSS-->
-    <link rel="stylesheet" href="css/stylesheet.css" >
-    <!--CSS MEDIA QUERY-->
-    <link rel="stylesheet" href="css/stylesheet2.css">
-      <!-- ICONS https://material.io/icons/#ic_cloud-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Trash Tracker</title>
+        <link rel="icon" href="images/trashTracker.png"/>
+        <!--BOOTSTRAP-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!--CSS-->
+        <link rel="stylesheet" href="css/stylesheet.css">
+        <!--CSS MEDIA QUERY-->
+        <link rel="stylesheet" href="css/stylesheet2.css">
+        <!-- ICONS https://material.io/icons/#ic_cloud-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--POPOVER-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 </head>
 
 <body> <!--START OF BODY-->     
-<header> <!--START OF HEADER-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top";>
-      <a class="navbar-brand" href="">
-          <img src="images/trashTracker.png" width="40" height="auto"/> 
-      </a>    
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-       <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto mr-auto mt-2 mt-sm-0">
-        <li class="nac-item"><a class="nav-link" href="profile.html">Profile</a></li>
-        <li class="nac-item"><a class="nav-link" href="#historical">Historical</a></li>        
-        <li class="nac-item"><a class="nav-link" href="#normal">Normal</a></li>        
-        <li class="nac-item"><a class="nav-link" href="#game">Game</a></li>        
-        <li class="nav-item active"><a class="nav-link" href="users"><i class="material-icons">settings</i></a></li> 
-      </ul>
-      <a href="#" data-toggle="modal" data-target="#logoutModal"> 
-          <button type="button" class="btn btn-outline-success">Logout</button>
-      </a>
-      </div>
-      </nav><!--END OF NAV-->
-</header><!--END OF HEADER-->
-
-<!--#1-->
-<div class="container" style="background-color:#b4b4b4; margin-top:100px;">
- <h3>GENERAL INFO</h3>    
-  <div class="row">
-    <div class="col-sm" style="background-color:rgb(88, 180, 255); margin: 5px;">
-    <p>Address <br/>
-        Street <br/>
-        City <br/>
-        State <br/>
-        Zipcode <br/>
-    </p>    
+ <header> <!--START OF HEADER-->
+  <!--START OF NAV-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <!--LOGO-->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+    </button>
+    <!--START NAV BAR-->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="container-fluid"> 
+            <div class="row" style="padding: 0 5px"><!--ROW-->
+      <div class="col-sm-4" style="background-color:#FFFFFF; width:500px; "><!--LOGO-->
+          <img class="img" src="images/trashtracker.png" width="100px">
+        </div><!--LOGO-->
+        <div class="col-sm" style="background-color:#FFFFFF; width:500px;"><!--USER INFO-->
+          <p>Welcome [name] <br/>
+              Street <br/>
+              <p class="img_center">
+              <a href="../trashTracker_webpage/login.html"> 
+                <button type="button" class="btn btn-outline-success">Logout</button>
+              </a>
+            </p>
+          </p>    
+        </div><!--USER INFO-->
+        <div class="col-sm" style="background-color:#FFFFFF; text-align: center; width:500px; float:right;"><!--BIN INFO-->
+          <h6>Your bins</h6>
+                    <a href="#" title="Trash" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
+                    <button type="button" class="btn btn-secondary">
+                        <img src="images/waste.png" width="32px">
+                    </button>
+                </a>
+                <a href="#" title="Recycle" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
+                    <button type="button" class="btn btn-primary">
+                        <img src="images/recycle.png" width="30px">
+                    </button>
+                </a>
+                <a href="#" title="Green Waste" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
+                    <button type="button" class="btn btn-success">
+                        <img src="images/greenwaste.png" width="30px">
+                    </button>
+                </a>
+            <script>
+              $(document).ready(function(){
+                  $('[data-toggle="popover"]').popover();   
+              });
+            </script>
+            <h6 class="img_center">Click for more information</h6>
+        </div><!--BIN INFO-->
     </div>
-    <div class="col-sm-8" style="background-color:rgb(255, 255, 255); margin: 5px;">
-     <p class="img_center">
-        <img src="images/waste.png" width="100px"> 
-        <img src="images/recycle.png" width="90px"> 
-        <img src="images/greenwaste.png" width="90px">    
-     </p>  
-  </div>
- </div>
-</div>
-
-<!--#2-->
-<div id="historical" style="margin-bottom:100px;"></div>
-<div class="container" style="background-color:#b4b4b4; margin-top:5px;">
- <h3>Historical Comparison</h3>
- <div class="row">
-  <div class="col-sm" style="background-color:rgb(88, 180, 255); margin: 5px; height:600px;">
-    <ul class="nav nav-tabs">
-     <li class="nav-item">
-      <a class="nav-link active" href="#">Weekly View</a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" href="#">Monthly</a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" href="#">Year View</a>
-     </li>
-    </ul>
-    <p>
-     <ul>
-      <li>Bar graph (weekly view)</li>
-      <li>Line graph (monthly)</li>
-      <li>Clickables to show or hide</li>
-    </ul>
-   </p>
-  </div>
- </div>   
-</div>
-
-<!--#3-->
-<div id="normal" style="margin-bottom:100px;"></div>
-<div class="container" style="background-color:#b4b4b4; margin-top:50px;">
-  <h3>Normal Comparison</h3>
-  <div class="row">      
-   <div class="col-sm" style="background-color:rgb(88, 180, 255); margin: 5px; height:500px;">
-    <p class="img_center"><img src="images/thumbsUp.png" class="resize1"></p>
-   </div>
-   <div class="col-sm-8" style="background-color:rgb(39, 103, 155); margin: 5px;">
-    <ul class="nav nav-tabs">
-     <li class="nav-item">
-       <a class="nav-link active" href="#">Weekly View</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#">Monthly</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#">Year View</a>
-     </li>
-    </ul>
-    <p>
-    <ul>
-       <li>Bar graph (weekly view)</li>
-       <li>Line graph (monthly)</li>
-       <li>Clickables to show or hide</li>
-     </ul>
-    </p>
-    </div><!--.col-sm 8-->
-   </div><!--.row-->
-  </div><!--.container-->
-
-<!--#4-->
-<div id="game" style="margin-bottom:100px;"></div>
-<div class="container" style="background-color:#b4b4b4; margin-top:50px; margin-bottom:50px;">
-  <h3>Recycle Game</h3>
-   <div class="row">
-   <div class="col-sm" style="background-color:rgb(88, 180, 255); margin: 5px; height:700px;">
-    <p>
-      <ul>
-        <li>Be able to go back see what the other items </li>
-        <li>Each week update with new items, click and drag into the bin.</li>
-        <li>Correct fill one star</li>
-      </ul>
-    </p>   
-  </div><!--.col-sm-->
- </div> <!--.row-->
-</div><!--.container-->
-
-<!--FOOTER CONTAINER-->
-<!--START BOTTOM NAVBAR-->
-<footer>
-<nav class="navbar fixed-bottom navbar-expand navbar-light bg-light">
-    <!--BOTTOM DROP UP MENU-->
-    <li class="nav-item dropup" style="list-style-type:none" >
-      <a class="nav-link dropdown-toggle" href="#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
-        <img src="images/arrowup.png" width="25" height="auto">
-      </a>
-      <!--PAGE REDIRECTION-->
-      <div class="dropdown-menu" aria-labelledby="dropdown10">
-        <ul class="navbar-nav mr-auto mr-auto mt-2 mt-sm-0">
-            <li class="nac-item"><a class="nav-link" href="profile.html">Profile</a></li>
-            <li class="nac-item"><a class="nav-link" href="#historical">Historical</a></li>        
-            <li class="nac-item"><a class="nav-link" href="#normal">Normal</a></li>        
-            <li class="nac-item"><a class="nav-link" href="#game">Game</a></li>        
-            <li class="nav-item active"><a class="nav-link" href="users"><i class="material-icons">settings</i></a></li> 
-          </ul>
+    </div>
+  </nav><!--END OF NAV-->
+</header><!--END OF HEADER-->
+<!--Historical Comparison-->
+<div class="container" id="historical" style="background-color:#b4b4b4; margin-top:150px; width:800px;">
+    <div class="row">
+     <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; height:250px;">
+       <ul class="nav nav-tabs">
+        <li class="nav-item">
+         <a class="nav-link active" href="#">Weekly View</a>
+        </li>
+        <li class="nav-item">
+         <a class="nav-link" href="#">Monthly</a>
+        </li>
+        <li class="nav-item">
+         <a class="nav-link" href="#">Year View</a>
+        </li>
+       </ul>
+       <p>
+        <ul>
+         <li>Bar graph (weekly view)</li>
+         <li>Line graph (monthly)</li>
+         <li>Clickables to show or hide</li>
+       </ul>
+     </p>
+      <p class="img_center">
+       <a class="btn btn-sm btn-primary" href="" role="button">Recycling</a> &nbsp
+       <a class="btn btn-sm btn-success" href="" role="button">Trash</a> &nbsp
+       <a class="btn btn-sm btn-secondary" href="" role="button">Green Waste</a> &nbsp 
+      </p>
+      <a href=""><i class="material-icons">arrow_back</i>Past 4 Weeks</a>
+      <span class="alignright"><a href="">Next 4 Weeks<i class="material-icons">arrow_forward</i></a></span>
+      
+     </div><!--.col-sm-->
+    </div><!--.row --> 
+   </div><!--.container-->
+   
+   <!--Normal Comparison-->
+   <div class="container" style="background-color:#b4b4b4; margin-top:5px; width:800px;">
+     <div class="row">      
+      <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; height:200px;">
+       <h3>How do you stack up?</h3>
+       <p class="img_center"><img src="images/thumbsUp.png" class="resize1" width= 80px;></p>
       </div>
-    </li>
-  </nav><!--END BOTTOM NAVBAR-->
-</footer>
-
+      <div class="col-sm-8" style="background-color:#FFFFFF; margin: 5px;">
+       <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Weekly View</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Monthly</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Year View</a>
+        </li>
+       </ul>
+       <p>
+       <ul>
+          <li>Bar graph (weekly view)</li>
+          <li>Line graph (monthly)</li>
+          <li>Clickables to show or hide</li>
+       </ul>
+       </p>
+       </div><!--.col-sm 8-->
+      </div><!--.row-->
+     </div><!--.container-->
+   
+   <!--Recycle Game-->
+   <div class="container" style="background-color:#b4b4b4b9; margin-top:5px; margin-bottom:100px; width:800px;">
+     <div class="row">
+       <div class="container">  
+       <span class="img_center">
+             <h3>Drag and drop each item into the correct bin for points!</h3>
+         </span>
+       </div>
+      <div class="col-sm-6" style="background-color:#FFFFFF; margin: 5px; height:auto;">
+       <p class="img_center" style="padding-top:25px;">
+         <img src="images/apple.png"><br><br>
+         <img src="images/grey.png" width="60px"> 
+         <img src="images/blue.png" width="60px"> 
+         <img src="images/green.png" width="60px">    
+       </p>
+       <br>
+        <a href=""><i class="material-icons">arrow_back</i>Previous</a>
+        <span class="alignright"><a href="">Next<i class="material-icons">arrow_forward</i></a></span>
+       <br>  
+      </div>
+     <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; height:auto;">
+         <p class="img_center" style="padding-top:25px;">
+           <img src="images/game/badge.png"><br><br>
+         To date you've gotten 12 correct!<br>
+           <img src="images/game/stars.png" width="150px"><br><br>
+         </p>
+     </div>  
+    </div> <!--.row-->
+   </div><!--.container-->
+   
+   <footer><!--FOOTER CONTAINER-->
+   <nav class="navbar fixed-bottom navbar-expand navbar-light bg-light"><!--START BOTTOM NAVBAR-->
+             <a class="nav-link" href="contact">Contact Us</a> 
+             |
+             <a class="nav-link" href="">Privacy and Policy</a>
+         </div>
+     </nav><!--END BOTTOM NAVBAR-->
+   </footer><!--.FOOTER-->
+   
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
