--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <link rel="stylesheet" href="css/stylesheet2.css">
         <!-- ICONS https://material.io/icons/#ic_cloud-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--POPOVER-->
+        <!--POPOVER
+        https://www.w3schools.com/bootstrap4/bootstrap_popover.asp
+        -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script type="text/javascript" src="js/popover.js"></script>
+        <!--GRAPH-->
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript" src="js/graph.js"></script>
 </head>
 
 <body> <!--START OF BODY-->     
@@ -29,11 +35,11 @@
     <!--START NAV BAR-->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="container-fluid"> 
-            <div class="row" style="padding: 0 5px"><!--ROW-->
-      <div class="col-sm-4" style="background-color:#FFFFFF; width:500px; "><!--LOGO-->
-          <img class="img" src="images/trashtracker.png" width="100px">
-        </div><!--LOGO-->
-        <div class="col-sm" style="background-color:#FFFFFF; width:500px;"><!--USER INFO-->
+        <div class="row" style="padding: 0 5px"><!--ROW-->
+         <div class="col-sm-4" style="background-color:#FFFFFF; width:500px; "><!--LOGO-->
+            <img class="img" src="images/trashTracker.png" width="100px">
+         </div><!--LOGO-->
+         <div class="col-sm" style="background-color:#FFFFFF; width:500px;"><!--USER INFO-->
           <p>Welcome [name] <br/>
               Street <br/>
               <p class="img_center">
@@ -42,8 +48,8 @@
               </a>
             </p>
           </p>    
-        </div><!--USER INFO-->
-        <div class="col-sm" style="background-color:#FFFFFF; text-align: center; width:500px; float:right;"><!--BIN INFO-->
+         </div><!--USER INFO-->
+         <div class="col-sm" style="background-color:#FFFFFF; text-align: center; width:500px; float:right;"><!--BIN INFO-->
           <h6>Your bins</h6>
                     <a href="#" title="Trash" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
                     <button type="button" class="btn btn-secondary">
@@ -60,50 +66,53 @@
                         <img src="images/greenwaste.png" width="30px">
                     </button>
                 </a>
-            <script>
-              $(document).ready(function(){
-                  $('[data-toggle="popover"]').popover();   
-              });
-            </script>
             <h6 class="img_center">Click for more information</h6>
-        </div><!--BIN INFO-->
-    </div>
+         </div><!--BIN INFO-->
+      </div>
     </div>
   </nav><!--END OF NAV-->
 </header><!--END OF HEADER-->
+
 <!--Historical Comparison-->
 <div class="container" id="historical" style="background-color:#b4b4b4; margin-top:150px; width:800px;">
     <div class="row">
-     <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; height:250px;">
+     <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; height:auto;">
        <ul class="nav nav-tabs">
         <li class="nav-item">
          <a class="nav-link active" href="#">Weekly View</a>
         </li>
         <li class="nav-item">
-         <a class="nav-link" href="#">Monthly</a>
+         <a class="nav-link disabled" href="#">Monthly</a>
         </li>
         <li class="nav-item">
-         <a class="nav-link" href="#">Year View</a>
+         <a class="nav-link disabled" href="#">Year View</a>
         </li>
        </ul>
        <p>
-        <ul>
-         <li>Bar graph (weekly view)</li>
-         <li>Line graph (monthly)</li>
-         <li>Clickables to show or hide</li>
-       </ul>
-     </p>
-      <p class="img_center">
-       <a class="btn btn-sm btn-primary" href="" role="button">Recycling</a> &nbsp
-       <a class="btn btn-sm btn-success" href="" role="button">Trash</a> &nbsp
-       <a class="btn btn-sm btn-secondary" href="" role="button">Green Waste</a> &nbsp 
-      </p>
-      <a href=""><i class="material-icons">arrow_back</i>Past 4 Weeks</a>
-      <span class="alignright"><a href="">Next 4 Weeks<i class="material-icons">arrow_forward</i></a></span>
-      
+
+      <div id="chart_div" style="padding: 10px"></div>
+      <a href=""><i class="material-icons">arrow_back</i>Past Week</a>
+      <span class="alignright">
+        <a href="">Next Week<i class="material-icons">arrow_forward</i></a>
+      </span>
      </div><!--.col-sm-->
     </div><!--.row --> 
    </div><!--.container-->
+
+<!-- OTHER GRAPHN BUTTONS....
+       <div id="btn-group">
+         <button class="button button-blue" id="none">No Format</button>
+         <button class="button button-blue" id="scientific">Scientific Notation</button>
+         <button class="button button-blue" id="decimal">Decimal</button>
+         <button class="button button-blue" id="short">Short</button>
+       </div>
+        <p class="img_center">
+       <a class="btn btn-sm btn-primary" href="" role="button">Recycling</a> &nbsp
+       <a class="btn btn-sm btn-secondary" href="" role="button">Trash</a> &nbsp
+       <a class="btn btn-sm btn-success" href="" role="button">Green Waste</a> &nbsp 
+      </p>
+-->     
+
    
    <!--Normal Comparison-->
    <div class="container" style="background-color:#b4b4b4; margin-top:5px; width:800px;">
@@ -115,27 +124,23 @@
       <div class="col-sm-8" style="background-color:#FFFFFF; margin: 5px;">
        <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Weekly View</a>
+          <a class="nav-link disabled" href="#">Closest</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Monthly</a>
+          <a class="nav-link disabled" href="#">Neighborhood</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Year View</a>
+          <a class="nav-link disabled" href="#">City</a>
         </li>
        </ul>
        <p>
-       <ul>
-          <li>Bar graph (weekly view)</li>
-          <li>Line graph (monthly)</li>
-          <li>Clickables to show or hide</li>
-       </ul>
+        We calculated the percent of waste you recycled this month, and found that you recycled more and sent less landfill than your neightbors did. 
        </p>
        </div><!--.col-sm 8-->
       </div><!--.row-->
      </div><!--.container-->
    
-   <!--Recycle Game-->
+   <!--RECYCLE GAME-->
    <div class="container" style="background-color:#b4b4b4b9; margin-top:5px; margin-bottom:100px; width:800px;">
      <div class="row">
        <div class="container">  
@@ -167,7 +172,7 @@
    
    <footer><!--FOOTER CONTAINER-->
    <nav class="navbar fixed-bottom navbar-expand navbar-light bg-light"><!--START BOTTOM NAVBAR-->
-             <a class="nav-link" href="contact">Contact Us</a> 
+             <a class="nav-link" href="http://trackingtrash.com/" target="blank">Contact Us</a> 
              |
              <a class="nav-link" href="">Privacy and Policy</a>
          </div>
