--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
               Street <br/>
               <p class="img_center">
               <a href="login.html"> 
-                <button type="button" class="btn btn-outline-success">Logout</button>
+                <button type="button" class="btn btn-outline-secondary">Logout</button>
               </a>
             </p>
           </p>    
@@ -53,17 +53,17 @@
          <div class="col-sm" style="background-color:#FFFFFF; text-align: center; width:500px; float:right;"><!--BIN INFO-->
           <h6>Your bins</h6>
                     <a href="#" title="Trash" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
-                    <button type="button" class="btn btn-secondary">
+                    <button type="button" class="">
                         <img src="../images/waste.png" width="32px">
                     </button>
                 </a>
                 <a href="#" title="Recycle" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="">
                         <img src="../images/recycle.png" width="30px">
                     </button>
                 </a>
                 <a href="#" title="Green Waste" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
-                    <button type="button" class="btn btn-success">
+                    <button type="button" class="">
                       <img src="../images/greenwaste.png" width="30px">
                     </button>
                 </a>
