--- a/html/index.html
+++ b/html/index.html
@@ -57,12 +57,12 @@
                         <img src="../images/waste.png" width="32px">
                     </button>
                 </a>
-                <a href="#" title="Recycle" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
+                <a href="#" title="Recycling" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
                     <button type="button" class="btn btn-primary">
                         <img src="../images/recycle.png" width="30px">
                     </button>
                 </a>
-                <a href="#" title="Green Waste" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
+                <a href="#" title="Greenwaste" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
                     <button type="button" class="btn btn-success">
                       <img src="../images/greenwaste.png" width="30px">
                     </button>
