buttons and image

--- a/html/index.html
+++ b/html/index.html
@@ -58,12 +58,12 @@
                     </button>
                 </a>
                 <a href="#" title="Recycling" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="">
                         <img src="../images/recycle.png" width="30px">
                     </button>
                 </a>
                 <a href="#" title="Greenwaste" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
-                    <button type="button" class="btn btn-success">
+                    <button type="button" class="">
 
                       <img src="../images/greenwaste.png" width="30px">
                     </button>
