--- a/html/signup.html
+++ b/html/signup.html
@@ -34,29 +34,27 @@
   <div class="row">      
    <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; padding: 15px 10px; height:auto;">
     <h4>Registering to Trash Tracker</h4><br>
-    <form name="userLogin">
+	<div class = "container">
+    <!--<form name="userLogin">-->
+	<form enctype = "multipart/form-data" action = "signup.php" method = "post">
       <div class="form-group">
         <label for="InputID">ID TOKEN</label>
-        <input type="id" class="form-control" id="IDtoken" aria-describedby="idtoken" placeholder="Enter ID">
+        <input type="text" class="form-control" name="tokenId" aria-describedby="token" placeholder="Enter ID">
       </div>
-      <div class="form-group">
-        <label for="InputPassword1">PW</label>
-        <input type="password" class="form-control" id="IDtokenPW" placeholder="Password">
-      </div>
-      <div class="form-group">
-            <label for="inputName">Name</label>
-            <input type="name" class="form-control" id="firstName" aria-describedby="fname" placeholder="Enter ID">
+        <label for="inputName">Name</label>
+        <input type="name" class="form-control" name="name" aria-describedby="name" placeholder="Enter Name">
     </div>
       <div class="form-group">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter ID">
+        <label for="inputEmail">Email</label>
+        <input type="email" class="form-control" name="email" aria-describedby="email" placeholder="Enter Email">
     </div>
     <div class="form-group">
-            <label for="inputUpdatePW">Updated PW</label>
-            <input type="password" class="form-control" id="updatePW" aria-describedby="updatepassword" placeholder="Update PW">
-          </div>
-      <a class="btn btn-sm btn-success" href="index.html" role="button">Sign Up</a> <br>
+        <label for="inputUpdatePW">New Password</label>
+        <input type="password" class="form-control" name="password" aria-describedby="updatepassword" placeholder="New Password">
+    </div>
+	<input type = "submit" name = "submit" class="btn btn-sm btn-success" value = "Log In"/> <br>
     </form>
+  </div>
   </div>
  </div><!--.row-->
 </div><!--.container-->
