--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
         <script type="text/javascript" src="../js/graph.js"></script>
 </head>
 
-<body> <!--START OF BODY-->     
+<body style="background-color:#b4b4b4;"> <!--START OF BODY-->     
  <header style="margin-bottom:80px;"> <!--START OF HEADER-->
   <!--START OF NAV-->  
   <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color:#fff;">
@@ -53,9 +53,9 @@
   <div class="row">
 
     <!--LEFT--> 
-    <div class="oneLeft" id="info" style="width:25%; height:auto;">
+    <div class="oneLeft" id="info" style="">
       <div class="row"><!--.row-->
-        <div class="onel" style="margin: 5px; padding: 15px;"><!--LOGO-->
+        <div class="onel" style=""><!--LOGO-->
             <p>Welcome [name] <br/>
                 Street <br/>
                 <p class="img_center">
@@ -67,7 +67,7 @@
       
     
     <div class="row">
-    <div class="twol" style="margin: 5px; padding: 15px;"><!--BIN INFO-->
+    <div class="twol" style=""><!--BIN INFO-->
       <h6>Your bins</h6>
                 <a href="#" title="Trash" data-toggle="popover" data-trigger="hover" data-content="BIN NUMBER">
                 <button type="button" class="">
@@ -90,7 +90,7 @@
      </div><!--.row-->
 
     <div class="row">
-    <div class="threel" style="margin: 5px; padding: 15px;">
+    <div class="threel" style="">
         <img src="../images/recycle.png" width="100px"><br>
         NEXT PICK UP: <br>
         MM/DD/YY<br>
