--- a/html/login.html
+++ b/html/login.html
@@ -21,7 +21,7 @@
   <div class="row" style="padding: 0 15px"><!--ROW-->
     <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; text-align:center; padding: 15px;"><!--LOGO-->
       <h1>
-        <img src="/images/trashtracker.png" width="100px">
+        <img src="../images/trashtracker.png" width="100px">
         Welcome to Trash Tracker     
       </h1>
     </div><!--LOGO-->    
@@ -30,12 +30,11 @@
 <!--.GENERAL INFO-->
 
 <!--SIGN IN-->
-<div class="container" style="background-color:#b4b4b4; margin-top: 25px; margin-bottom: 25px">
+<div class="container" style="margin-top: 25px; margin-bottom: 25px">
   <div class="row">      
    <div class="col-sm" style="background-color:#FFFFFF; margin: 5px; padding: 15px 10px; height:auto;">
     <h3>Log into Trash Tracker</h3><br>
-    <div class="container">
-    <form enctype = "multipart/form-data" action="index.php" method="post">
+      <form enctype = "multipart/form-data" action="index.php" method="post">
       <div class="form-group">
         <label for="InputEmail1">Email address</label>
         <input type="text" class="form-control" name="userEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -60,11 +59,11 @@
     <a class="btn btn-sm btn-primary" href="signup.html" role="button" onclick=""> New User</a> <br>  
   </div>
 
-    <div class="col-sm-6" style="background-color:#b4b4b4; margin: 5px; padding: 10px;">
+  <div class="col-sm-6" style="background-color:#b4b4b4; margin: 5px; padding: 10px;">
     <p class="img_center"><img src="../images/house.png" class="resize1" width= 300px;></p>
   </div><!--.col-sm-->
- </div><!--.row-->
-</div><!--.container-->
+  </div>
+  </div>
 
 <footer><!--FOOTER CONTAINER-->
 <nav class="navbar fixed-bottom navbar-expand navbar-light bg-light"><!--START BOTTOM NAVBAR-->
