--- a/html/index.html
+++ b/html/index.html
@@ -25,16 +25,16 @@
 </head>
 
 <body style="background-color:#b4b4b4;"> <!--START OF BODY-->     
- <header style="margin-bottom:80px;"> <!--START OF HEADER-->
+ <header style="margin-bottom:50px;"> <!--START OF HEADER-->
   <!--START OF NAV-->  
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color:#fff;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:#fff;">
       <a class="navbar-brand" href="#"></a>
       <img class="img" src="../images/trashtracker.png" width="40px">
     </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Users <span class="sr-only">(current)</span></a>
@@ -122,7 +122,7 @@
              <a href="">Next Week<i class="material-icons">arrow_forward</i></a>
            </span>
            <div id="chart_div" style="padding: 10px; width: 75%; height: 400px;"></div>
-                <!-- OTHER GRAPHN BUTTONS....
+            <!-- OTHER GRAPHN BUTTONS....
             <div id="btn-group">
               <button class="button button-blue" id="none">No Format</button>
               <button class="button button-blue" id="scientific">Scientific Notation</button>
