another great week

--- a/html/account.html
+++ b/html/account.html
@@ -174,20 +174,23 @@ session_start();
 
 <body> <!--START OF BODY-->     
  <header style="margin-bottom:20px;"> <!--START OF HEADER-->
-  <!--START OF NAV-->  
- <!--HEADER-->
-<div class="container-fluid" id="id" style="background-color:#b4b4b4;"><!--container-fuild-->
-  <div class="row" style="padding: 0 15px"><!--ROW-->
-    <div class="col-sm" style="background-color:#FFFFFF; margin: 5px 0px; text-align:center; padding: 15px;"><!--LOGO-->
-      <h1>
-        <img src="../images/trashtracker.png" width="100px">
-        Welcome to Trash Tracker     
-      </h1>
-    </div><!--LOGO-->    
- </div><!--ROW-->
+<!--START OF NAV-->  
+<!--HEADER-->
+<div class="container-fluid" id="id" style="background-color:#000;"><!--container-fuild-->
+  <div class="row">
+    <div class="flexNavContainer" style="background-color:#0066ff; text-align:center;">
+
+    </div>
+
+    <div class="flexNavContainer" style="background-color:#b4b4b4; text-align:center;">
+    
+    </div>
 </div><!--container-fuild-->
 </header><!--END OF HEADER-->
 
+<!--
+  <img src="../images/trashtracker.png" width="100px">
+-->
 <!--LEFT CONTAINER--> 
 <div class="container" style="background-color:#818285;">
   <div class="row">
